Fixed an error with double scroll bars

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,11 @@
     padding: 0px;
 }
 
-html, body {
+html {
+    width: 100%;
+    height: 100%;
+}
+body {
     font-family: 'Muli', sans-serif;
     font-size: 16px;
     width: 100%;
